...
        label.text = "Hello, world!"
        label.font = .systemFont(ofSize: 13, weight: .regular)
        label.textColor = .yPwhite
        return label
    }()
    
    private var logOutButton: UIButton = {
        let button = UIButton()
        return button
    }()
    var presenter: ProfilePresenterProtocol?
    override func viewDidLoad() {
        super.viewDidLoad()
...
